--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.15",
     "node": "^22.10.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
